fixing spacing for 50-50 layout

--- a/web/themes/custom/peceful/skins/default/scss/main.scss
+++ b/web/themes/custom/peceful/skins/default/scss/main.scss
@@ -283,7 +283,10 @@ article .contextual {
 
 // Add a gap to layouts, @todo consider whether this same gap should ba pplied between all layouts
 .layout--twocol-section.layout--twocol-section--50-50{
-  gap:40px;
+  justify-content: space-evenly;
+  > div[class^="layout__region"] {
+    flex: 0 1 auto;
+  }
 }
 
 // hide pagination 
